@@ -17,6 +17,10 @@
 
 package it.grid.storm.persistence.impl.mysql;
 
+import static it.grid.storm.persistence.model.TapeRecallTO.RecallTaskType.valueOf;
+
+import com.google.common.collect.Lists;
+
 import it.grid.storm.persistence.PersistenceDirector;
 import it.grid.storm.persistence.dao.TapeRecallDAO;
 import it.grid.storm.persistence.exceptions.DataAccessException;
@@ -32,11 +36,9 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
 import java.sql.Timestamp;
-import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.GregorianCalendar;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.UUID;
 
@@ -78,11 +80,11 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 					.getQueryNumberInProgress(dbConnection, voName);
 			}
 
-			log.debug("QUERY: {}", prepStatement.toString());
+			log.debug("QUERY: {}", prepStatement);
 
 			res = prepStatement.executeQuery();
 
-			if (res.first() == true) {
+			if (res.first()) {
 				status = res.getInt(1);
 			}
 		} catch (SQLException e) {
@@ -114,10 +116,10 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 				prepStatement = sqlHelper.getQueryNumberQueued(dbConnection, voName);
 			}
 
-			log.debug("QUERY: {}", prepStatement.toString());
+			log.debug("QUERY: {}", prepStatement);
 			res = prepStatement.executeQuery();
 
-			if (res.first() == true) {
+			if (res.first()) {
 				status = res.getInt(1);
 			}
 		} catch (SQLException e) {
@@ -150,15 +152,15 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 					.getQueryReadyForTakeOver(dbConnection, voName);
 			}
 
-			log.debug("QUERY: {}", prepStatement.toString());
+			log.debug("QUERY: {}", prepStatement);
 			res = prepStatement.executeQuery();
 
-			if (res.first() == true) {
+			if (res.first()) {
 				status = res.getInt(1);
 			}
 		} catch (SQLException e) {
 			throw new DataAccessException("Error executing query: '"
-				+ prepStatement.toString() + "' " + e.getMessage(), e);
+				+ prepStatement + "' " + e.getMessage(), e);
 		} finally {
 			releaseConnection(res, prepStatement, dbConnection);
 		}
@@ -170,7 +172,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 		throws DataAccessException {
 
 		TapeRecallTO task = null;
-		ArrayList<TapeRecallTO> taskList = new ArrayList<TapeRecallTO>();
+		List<TapeRecallTO> taskList = Lists.newArrayList();
 
 		Connection dbConnection = getConnection();
 		ResultSet res = null;
@@ -180,14 +182,14 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 			prepStatement = sqlHelper
 				.getQueryGetGroupTasks(dbConnection, groupTaskId);
 
-			log.debug("QUERY: " + prepStatement.toString());
+			log.debug("QUERY: {}", prepStatement);
 			res = prepStatement.executeQuery();
 
-			if (res.first() == false) {
+			if (!res.first()) {
 				log.error("No tasks with GroupTaskId='{}'", groupTaskId);
 				throw new DataAccessException(
 					"No recall table row retrieved executing query: '"
-						+ prepStatement.toString() + "'");
+						+ prepStatement + "'");
 			}
 			do {
 				task = new TapeRecallTO();
@@ -196,7 +198,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 			} while (res.next());
 		} catch (SQLException e) {
 			throw new DataAccessException("Error executing query: '"
-				+ prepStatement.toString() + "' " + e.getMessage(), e);
+				+ prepStatement + "' " + e.getMessage(), e);
 		} finally {
 			releaseConnection(res, prepStatement, dbConnection);
 		}
@@ -216,16 +218,16 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 			prepStatement = sqlHelper
 				.getQueryGetGroupTasks(dbConnection, groupTaskId);
 
-			log.debug("QUERY: {}", prepStatement.toString());
+			log.debug("QUERY: {}", prepStatement);
 			res = prepStatement.executeQuery();
 			response = res.first();
-			if (response == false) {
+			if (!response) {
 				log.info("No tasks found with GroupTaskId='{}'",groupTaskId);
 			}
 		} catch (SQLException e) {
 		  log.error(e.getMessage(), e);
 			throw new DataAccessException("Error executing query: '"
-				+ prepStatement.toString() + "' " + e.getMessage(), e);
+				+ prepStatement + "' " + e.getMessage(), e);
 		} finally {
 			releaseConnection(res, prepStatement, dbConnection);
 		}
@@ -244,25 +246,22 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 		try {
 			prepStatement = sqlHelper.getQueryGetTask(dbConnection, taskId,
 				requestToken);
-			log.debug("QUERY: {}", prepStatement.toString());
+			log.debug("QUERY: {}", prepStatement);
 			res = prepStatement.executeQuery();
 
-			if (res.first() == false) {
-				log.error("No task found for requestToken={} taskId={}. Query={}",
-				  requestToken ,
-				  taskId.toString(),
-				  prepStatement.toString());
-				  
+			if (!res.first()) {
+				log.error("No task found for requestToken={} taskId={}. Query={}", requestToken, taskId, prepStatement);
+
 				throw new DataAccessException("No task found for requestToken="
-					+ requestToken + " " + "taskId=" + taskId.toString() + ". Query = "
-					+ prepStatement.toString());
+					+ requestToken + " " + "taskId=" + taskId + ". Query = "
+					+ prepStatement);
 			}
 			task = new TapeRecallTO();
 			setTaskInfo(task, res);
 		} catch (SQLException e) {
 		  log.error(e.getMessage(), e);
 			throw new DataAccessException("Error executing query: '"
-				+ prepStatement.toString() + "' " + e.getMessage(), e);
+				+ prepStatement + "' " + e.getMessage(), e);
 		} finally {
 			releaseConnection(res, prepStatement, dbConnection);
 		}
@@ -284,13 +283,13 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 			prepStatement = sqlHelper.getQueryGetTask(dbConnection, taskId,
 				requestToken);
 
-			log.debug("QUERY: {}", prepStatement.toString());
+			log.debug("QUERY: {}", prepStatement);
 			res = prepStatement.executeQuery();
 			response = res.first();
 		} catch (SQLException e) {
-		  log.error(e.getMessage(), e);
+			log.error(e.getMessage(), e);
 			throw new DataAccessException("Error executing query: '"
-				+ prepStatement.toString() + "' " + e.getMessage(), e);
+				+ prepStatement + "' " + e.getMessage(), e);
 		} finally {
 			releaseConnection(res, prepStatement, dbConnection);
 		}
@@ -302,10 +301,9 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 		UUID proposedGroupTaskId) throws DataAccessException {
 
 		if (task.getTaskId() == null || task.getRequestToken() == null
-			|| task.getRequestToken().getValue().trim().equals("")) {
+			|| task.getRequestToken().getValue().trim().isEmpty()) {
 			log
-				.error("received Task insert request with empty primary key field TaskId or RequestToken. TaskId = "
-					+ task.getTaskId() + " , request token = " + task.getRequestToken());
+				.error("received Task insert request with empty primary key field TaskId or RequestToken. TaskId = {}, request token = {}", task.getTaskId(), task.getRequestToken());
 			throw new DataAccessException(
 				"Unable to create insert the task wth the provided UUID and "
 					+ "request token using UUID-namebased algorithm. TaskId = "
@@ -319,7 +317,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 		try {
 			dbConnection.setAutoCommit(false);
 		} catch (SQLException e) {
-			log.error("Error setting autocommit to false! " + e.getMessage());
+			log.error("Error setting autocommit to false! {}", e.getMessage());
 			throw new DataAccessException("Error setting autocommit to false! "
 				+ e.getMessage(), e);
 		}
@@ -334,15 +332,15 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 				prepStat = sqlHelper.getQueryGetGroupTaskIds(dbConnection,
 					task.getTaskId(), statuses);
 			}
-			log.debug("QUERY: " + prepStat.toString());
+			log.debug("QUERY: {}", prepStat);
 
 			res = prepStat.executeQuery();
 
-			if (res.first() == true) {
+			if (res.first()) {
 				/* Take the first, but there can be more than one result */
 				String uuidString = res
 					.getString(TapeRecallMySQLHelper.COL_GROUP_TASK_ID);
-				status = new Integer(res.getInt(TapeRecallMySQLHelper.COL_STATUS));
+				status = Integer.valueOf(res.getInt(TapeRecallMySQLHelper.COL_STATUS));
 				task.setStatusId(status.intValue());
 				task.setGroupTaskId(UUID.fromString(uuidString));
 				Calendar calendar = new GregorianCalendar();
@@ -354,8 +352,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 					log.error("Unable to set status update timestamps on the coned task");
 				}
 			} else {
-				log.debug("No task found for taskId=" + task.getTaskId()
-					+ " Creating a new group entry");
+				log.debug("No task found for taskId={} Creating a new group entry", task.getTaskId());
 				task.setGroupTaskId(proposedGroupTaskId);
 				task.setStatusId(status.intValue());
 			}
@@ -368,13 +365,13 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 					"Cannot create the query because the task is null or empty.");
 			}
 			try {
-				log.debug("Query(insert-task)=" + prepStat.toString());
+				log.debug("Query(insert-task)={}", prepStat);
 				prepStat.executeUpdate();
 				commit(dbConnection);
 			} catch (SQLException e) {
 				rollback(dbConnection);
 				throw new DataAccessException("Error executing query : "
-					+ prepStat.toString() + " ; " + e.getMessage(), e);
+					+ prepStat + " ; " + e.getMessage(), e);
 			}
 		} catch (SQLException e) {
 			rollback(dbConnection);
@@ -393,29 +390,28 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 	 * @see it.grid.storm.persistence.dao.TapeRecallDAO#purgeCompletedTasks(int)
 	 */
 	@Override
-	public int purgeCompletedTasks(int numMaxToPurge) throws DataAccessException {
+	public int purgeCompletedTasks(long expirationTime, int numTasks) throws DataAccessException {
 
-		PreparedStatement prepStatement = null;
-		Connection dbConnection = getConnection();
+		PreparedStatement ps = null;
+		Connection con = getConnection();
 
 		int count = 0;
+		boolean hasLimit = numTasks > 0;
 		try {
-			if (numMaxToPurge == -1) {
-				prepStatement = sqlHelper.getQueryDeleteCompletedTasks(dbConnection);
+			if (hasLimit) {
+				ps = sqlHelper.getQueryDeleteCompletedTasks(con, expirationTime, numTasks);
 			} else {
-				prepStatement = sqlHelper.getQueryDeleteCompletedTasks(dbConnection,
-					numMaxToPurge);
+				ps = sqlHelper.getQueryDeleteCompletedTasks(con, expirationTime);
 			}
 
-			count = prepStatement.executeUpdate();
+			count = ps.executeUpdate();
 
 		} catch (SQLException e) {
-			throw new DataAccessException("Error executing query: "
-				+ prepStatement.toString(), e);
+			throw new DataAccessException("Error executing query: " + ps, e);
 		} finally {
-			releaseConnection(null, prepStatement, dbConnection);
+			releaseConnection(null, ps, con);
 		}
-		
+
 		return count;
 	}
 
@@ -433,7 +429,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 			prepStatement.executeUpdate();
 		} catch (SQLException e) {
 			throw new DataAccessException("Error executing query: "
-				+ prepStatement.toString(), e);
+				+ prepStatement, e);
 		} finally {
 			releaseConnection(null, prepStatement, dbConnection);
 		}
@@ -470,7 +466,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 
 		Connection dbConnection = getConnection();
 
-		List<TapeRecallTO> taskList = new LinkedList<TapeRecallTO>();
+		List<TapeRecallTO> taskList = Lists.newLinkedList();
 		TapeRecallTO task = null;
 		ResultSet res = null;
 
@@ -479,7 +475,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 		try {
 			dbConnection.setAutoCommit(false);
 		} catch (SQLException e) {
-			log.error("Error setting autocommit to false! " + e.getMessage());
+			log.error("Error setting autocommit to false! {}", e.getMessage());
 			throw new DataAccessException("Error setting autocommit to false! "
 				+ e.getMessage(), e);
 		}
@@ -492,9 +488,9 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 					dbConnection, numberOfTaks, voName);
 			}
 			// start transaction
-			log.debug("QUERY: " + prepStatement.toString());
+			log.debug("QUERY: {}", prepStatement);
 			res = prepStatement.executeQuery();
-			if (res.first() == false) {
+			if (!res.first()) {
 				log.info("No tape recall rows ready for takeover");
 				return taskList;
 			}
@@ -522,7 +518,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 		} catch (SQLException e) {
 			rollback(dbConnection);
 			throw new DataAccessException("Error executing query: "
-				+ prepStatement.toString(), e);
+				+ prepStatement, e);
 		} finally {
 			releaseConnection(res, prepStatement, dbConnection);
 		}
@@ -535,7 +531,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 
 		Connection dbConnection = getConnection();
 		ResultSet res = null;
-		List<TapeRecallTO> taskList = new ArrayList<TapeRecallTO>();
+		List<TapeRecallTO> taskList = Lists.newArrayList();
 
 		PreparedStatement prepStatement = null;
 
@@ -543,7 +539,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 			prepStatement = sqlHelper.getQueryGetAllTasksInProgress(dbConnection,
 				numberOfTaks);
 
-			log.debug("getAllInProgressTasks query: " + prepStatement.toString());
+			log.debug("getAllInProgressTasks query: {}", prepStatement);
 
 			res = prepStatement.executeQuery();
 
@@ -564,9 +560,9 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 
 		} catch (Exception e) {
 
-			log.error("Error executing query: {}", prepStatement.toString(), e);
+			log.error("Error executing query: {}", prepStatement, e);
 			throw new DataAccessException("Error executing query: "
-				+ prepStatement.toString(), e);
+				+ prepStatement, e);
 
 		} finally {
 
@@ -625,8 +621,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 
 		try {
 
-			task
-				.setRequestType(res.getString(TapeRecallMySQLHelper.COL_REQUEST_TYPE));
+			task.setRequestType(valueOf(res.getString(TapeRecallMySQLHelper.COL_REQUEST_TYPE)));
 			task.setFileName(res.getString(TapeRecallMySQLHelper.COL_FILE_NAME));
 			task.setPinLifetime(res.getInt(TapeRecallMySQLHelper.COL_PIN_LIFETIME));
 			task.setStatusId(res.getInt(TapeRecallMySQLHelper.COL_STATUS));
@@ -661,7 +656,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 		try {
 			dbConnection.setAutoCommit(false);
 		} catch (SQLException e) {
-			log.error("Error setting autocommit to false! " + e.getMessage());
+			log.error("Error setting autocommit to false! {}", e.getMessage());
 			throw new DataAccessException("Error setting autocommit to false! "
 				+ e.getMessage(), e);
 		}
@@ -676,33 +671,31 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 				prepStatement = sqlHelper.getQueryGetGroupTasks(dbConnection,
 					groupTaskId);
 
-				log.debug("QUERY: " + prepStatement.toString());
+				log.debug("QUERY: {}", prepStatement);
 				// retrieves the tasks of this task group
 				res = prepStatement.executeQuery();
 
-				if (res.first() == false) {
-					log.error("No tasks with GroupTaskId='" + groupTaskId + "'");
+				if (!res.first()) {
+					log.error("No tasks with GroupTaskId='{}'", groupTaskId);
 					throw new DataAccessException(
 						"No recall table row retrieved executing query: '"
-							+ prepStatement.toString() + "'");
+							+ prepStatement + "'");
 				}
 				// verify if their stored status is equal for all
 				oldStatusId = res.getInt(TapeRecallMySQLHelper.COL_STATUS);
 				do {
 					int currentStatusId = res.getInt(TapeRecallMySQLHelper.COL_STATUS);
 					if (currentStatusId != oldStatusId) {
-						log.warn("The tasks with groupTaskId " + groupTaskId
-							+ " have different statuses: " + currentStatusId + " from task "
-							+ res.getString(TapeRecallMySQLHelper.COL_TASK_ID)
-							+ " differs from expected " + oldStatusId);
+						log.warn("The tasks with groupTaskId {} have different statuses: {} from task {} differs "
+						  + "from expected {}", groupTaskId, currentStatusId,
+						  res.getString(TapeRecallMySQLHelper.COL_TASK_ID), oldStatusId);
 						break;
 					}
 					oldStatusId = currentStatusId;
 				} while (res.next());
 			} catch (SQLException e) {
 				log
-					.error("Unable to retrieve groupTaskId related tasks. SQLException: "
-						+ e);
+					.error("Unable to retrieve groupTaskId related tasks. SQLException: {}", e);
 				throw new DataAccessException(
 					"Unable to retrieve groupTaskId related tasks. ");
 			}
@@ -712,10 +705,8 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 				if (!TapeRecallStatus.getRecallTaskStatus(oldStatusId).precedes(
 					newStatusId)) {
 					log
-						.warn("Requested the update of the status of a recall task group to status "
-							+ newStatusId
-							+ " that is precedent to the recorded status "
-							+ oldStatusId + " performing the request the same...");
+						.warn("Requested the update of the status of a recall task group to status {} that is precedent "
+						  + "to the recorded status performing the request the same...", newStatusId, oldStatusId);
 				}
 				String timestampColumn = null;
 				if (TapeRecallStatus.isFinalStatus(newStatusId)) {
@@ -726,8 +717,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 						timestampColumn = TapeRecallMySQLHelper.COL_IN_PROGRESS_DATE;
 					} else {
 						log
-							.warn("unable to determine the status update timestamp column to use given the new statusId \'"
-								+ newStatusId + "\'");
+							.warn("unable to determine the status update timestamp column to use given the new statusId '{}'", newStatusId);
 					}
 				}
 				if (timestampColumn != null) {
@@ -737,8 +727,7 @@ public class TapeRecallDAOMySql extends TapeRecallDAO {
 							timestamp);
 					} catch (IllegalArgumentException e) {
 						log
-							.error("Unable to obtain the query to update task status and set status transition timestamp. IllegalArgumentException: "
-								+ e.getMessage());
+							.error("Unable to obtain the query to update task status and set status transition timestamp. IllegalArgumentException: {}", e.getMessage());
 						throw new DataAccessException(
 							"Unable to obtain the query to update task status and set status transition timestamp");
 					} catch (SQLException e) {
